--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,14 +31,15 @@ dependencies:
   cached_network_image: ^2.0.0
   cupertino_icons: ^1.0.2
   dio: ^3.0.9
-  url_launcher_web: ^0.1.1+1
   flutter:
     sdk: flutter
   http: ^0.12.0+4
   image_gallery_saver: ^1.2.2
   permission_handler: ^4.2.0+hotfix.3
+  provider: ^6.0.5
   random_string: ^2.0.1
   url_launcher: ^5.4.2
+  url_launcher_web: ^0.1.1+1
 
 dev_dependencies:
   flutter_lints: ^2.0.0
